--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 id="toolsInput"
               />
             </div>
-            <h4 class="mt-3 mb-3" id="showAllProfit">dfgdsgd</h4>
+            <h4 class="mt-3 mb-3" id="showAllProfit"></h4>
             <button id="profitShow" class="btn mb-2 btn-primary">
               Profit Show
             </button>
